# autopredict

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_PROPOSAL.md  AUDIT_REPORT.md  BACKTESTING.md  CALIBRATION_SUMMARY.md  CONTRIBUTING.md  DIAGNOSIS.md  EVALUATION.md  EVALUATION_SUMMARY.md  LEARNING.md  LICENSE  METRICS.md  PAPER.md  PHASE2_SUMMARY.md  PHASE3_DELIVERABLES.md  PHASE4_DELIVERABLES.md  QUICKREF.md  QUICKSTART.md  README.md  README_CALIBRATION.md  ROADMAP.md  TESTING_INFRASTRUCTURE.md  TROUBLESHOOTING.md  WORKFLOW.md  __init__.py  agent.py  calibration_recommendations.json  cli.py  config.json  conftest.py  detailed_calibration_report.py  market_env.py  predict.py  pyproject.toml  run_experiment.py  run_experiment_with_validation.py  test_validation.py  validation.py
.github/workflows/: tests.yml
autopredict/: README.md  __init__.py  agent.py  cli.py  live_scan.py  market_env.py  run_experiment.py  run_experiment_with_validation.py
autopredict/_defaults/: config.json  strategy.md
autopredict/backtest/: __init__.py  analysis.py  cli.py  engine.py  metrics.py
autopredict/config/: __init__.py  loader.py  schema.py  shadow.py
autopredict/core/: __init__.py  types.py
autopredict/domains/: __init__.py  base.py  modeling.py  recalibration.py  registry.py  router.py
autopredict/evaluation/: __init__.py  backtest.py  contracts.py  datasets.py  domain_slices.py  reporting.py  scoring.py
autopredict/forecasting/: __init__.py  contracts.py  providers.py
autopredict/ingestion/: __init__.py  base.py  cache.py  registry.py
autopredict/learning/: README.md  __init__.py  analyzer.py  logger.py  tuner.py
autopredict/live/: __init__.py  monitor.py  risk.py  safety_audit.py  trader.py
autopredict/markets/: __init__.py  base.py  manifold.py  polymarket.py
autopredict/prediction_market/: __init__.py  agent.py  builtin.py  legacy.py  registry.py  strategy.py  types.py
autopredict/recording/: __init__.py  contracts.py  recorder.py  replay.py
autopredict/self_improvement/: __init__.py  archive.py  frontier.py  loop.py  mutation.py  promotion.py  ratchet.py  selection.py
autopredict/strategies/: __init__.py  base.py  (+1 more)
configs/: README.md  live_trading.yaml.example  paper_trading.yaml  shadow_replay.yaml.example
datasets/: sample_markets.json  sample_markets_100.json  sample_markets_500.json  test_markets_minimal.json
docs/: ARCHITECTURE.md  BACKTESTING.md  DATASETS.md  DEPLOYMENT.md  FORECAST_PROVIDERS.md  LEARNING.md  METRICS.md  README.md  RECORDING.md  REPO_FILE_AUDIT.md  SHADOW_EXECUTION.md  STRATEGIES.md  TROUBLESHOOTING.md  fair_prob_guidelines.md
examples/: backtest_mispriced_prob.py  learning_demo.py
experiments/: baseline_metrics.json  log.jsonl  run_autoresearch.py  summary.json  summary.md
notebooks/: 01_basic_backtest.ipynb  02_strategy_comparison.ipynb  03_performance_analysis.ipynb  04_parameter_tuning.ipynb
prompts/: builder_codex.md  evaluator_codex.md
scripts/: __init__.py  calibration_analysis.py  demo.sh  generate_dataset.py  learn_and_improve.py  run_live.py  run_paper.py  verify_infrastructure.sh  verify_phase2.py
strategy_configs/: baseline.json  optimized.json
tests/: __init__.py  conftest.py  domain_rows.py  test_agent.py  test_cli_evaluate.py  test_cli_smoke.py  test_config.py  test_core_types.py  test_dataset_contract.py  test_domain_adapters.py  test_domain_models.py  test_domain_slice_reports.py  test_domain_strategies.py  test_evaluation.py  test_evaluation_report.py  test_evaluation_scaffold.py  test_forecast_provider.py  test_forecast_ratchet.py  test_ingestion_finance.py  test_ingestion_politics.py  test_ingestion_weather.py  test_learning.py  test_live_scan.py  test_manifold_adapter.py  test_market_env.py  test_meta_harness_archive.py  test_mispriced_strategy.py  test_monitor.py  test_polymarket.py  test_polymarket_adapter.py  test_prediction_market_scaffold.py  test_recalibration.py  test_recording.py  test_risk.py  test_run_experiment.py  test_run_live.py  test_safety_audit.py  test_self_improvement.py  test_shadow_execution.py  test_statistical_promotion.py  (+2 more)
validation/: __init__.py  fair_prob.py  validator.py
(+75 files in other folders)
