[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autopredict"
version = "0.1.0"
description = "A minimal framework for self-improving prediction market agents"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "AutoPredict Contributors"},
]
keywords = ["prediction-markets", "trading", "autoresearch", "self-improving"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Financial",
]

# Small runtime dependency set
dependencies = [
    "PyYAML>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "mypy>=0.990",
]
polymarket = [
    "py-clob-client>=0.34.6",
]

[project.urls]
Homepage = "https://github.com/howdymary/autopredict"
Documentation = "https://github.com/howdymary/autopredict/blob/main/README.md"
Repository = "https://github.com/howdymary/autopredict"

[project.scripts]
autopredict = "autopredict.cli:main"
autopredict-live = "scripts.run_live:main"
autopredict-paper = "scripts.run_paper:main"

[tool.setuptools]
py-modules = ["agent", "market_env", "run_experiment", "run_experiment_with_validation"]

[tool.setuptools.packages.find]
where = ["."]
include = ["autopredict*", "validation*", "scripts*"]

[tool.setuptools.package-data]
autopredict = [
    "_defaults/*.json",
    "_defaults/*.md",
    "_defaults/strategy_configs/*.json",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
